--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -2,7 +2,7 @@
   "name": "一个PWA示例3",
   "short_name": "PWA示例",
   "start_url": "/index.html",
-  "display": "standalone",
+  "display": "fullscreen",
   "background_color": "#fff",
   "theme_color": "#3eaf7c",
   "icons": [
