--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "一个PWA示例",
   "short_name": "PWA示例",
-  
+  "start_url": "/index.html",
   "icons": [
     {
       "src": "https://h5.sinaimg.cn/m/weibo-lite/icon-default-192.png",
@@ -14,8 +14,11 @@
       "type": "image/png"
     }
   ],
-	"start_url": "/index.html",
-	"display": "fullscreen",
-	"background_color": "#fff",
-	"theme_color": "#3eaf7c"
+  "scope": "/",
+  "display": "standalone",
+  "orientation": "portrait",
+  "background_color": "#F3F3F3",
+  "theme_color": "#F3F3F3",
+  "related_applications": [],
+  "prefer_related_applications": false
 }
