--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -4,12 +4,12 @@
   "start_url": "/index.html",
   "icons": [
     {
-      "src": "https://h5.sinaimg.cn/m/weibo-lite/icon-default-192.png",
+      "src": "/icon-default-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://h5.sinaimg.cn/m/weibo-lite/icon-default-512.png",
+      "src": "/icon-default-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
