--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -14,7 +14,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
